src/ticketCreatePage/ticketCreate.css
.Ticket-Container{
    border: 1px solid gray;
    height: max-content;
    margin: 0 auto;
    margin-top: 20px;
    background-color: rgb(255, 255, 255, .9);
    max-width: 800px;
}

.logInBody{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: auto;
}

.Ticket-Form{
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: Helvetica, sans-serif;
    font-size: 20px;
    padding: 10px;
}

.Logo-Img {
    position: absolute;
    height: 570px;
    left: 50%;
    top: 15%;
    transform: translate(-50%, -50%);
    margin-bottom: 50px;
}

.Ticket-Header{
    margin-bottom: 30px;
    padding-right: 10px;
    padding-left: 10px;
    padding-bottom: 10px;
    font-family: Helvetica, sans-serif;
    font-weight: bold;
    font-size: 30px;
    text-align: center;
    border-bottom: solid lightgray 1px;
}

.SubmitTicket-Button{
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #2EB394;
    border: 1px solid #2EB394;
    border-radius: 15px;
    box-shadow: rgba(0, 5, 5, 0.4) 1px 2px 4px;
    box-sizing: border-box;
    color: #000000;
    cursor: pointer;
    display: inline-block;
    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 16px;
    min-height: 35px;
    max-height: 35px;
    outline: 0;
    padding: 12px 14px;
    text-align: center;
    text-rendering: geometricprecision;
    text-transform: none;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    vertical-align: middle;
    margin-top: 15px;
    margin-bottom: 20px;
}

.SubmitTicket-Button:hover,
.SubmitTicket-Button:active {
    background-color: initial;
    background-position: 0 0;
    color: #2EB394;
}

.Location-Input{
    width: 250px;
    height: 24px;
    border-radius: 5px;
    border: solid #CAD6E2;
    font-size: 15px;
}

.Subject-Input{
    width: 250px;
    height: 24px;
    border-radius: 5px;
    font-size: 15px;
    border: solid #CAD6E2;
}


.Contact-Input {
    width: 250px;
    height: 24px;
    border-radius: 5px;
    border: solid #CAD6E2;
    font-size: 15px;
}

.createSubject,
.createLocation,
.CreateContactInfo,
.createPriority {
    margin-bottom: 10px;
}

label {
    padding-right: 10px;
}

textarea {
    resize: none;
}

